<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="hidalgo.brandon.photoncodechallenge.view.components.MatrixDimensFragment" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rowsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/rowsNumberPicker"
            android:text="@string/rows_textview_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/rowsNumberPicker"
            app:layout_constraintEnd_toStartOf="@+id/rowsNumberPicker"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/rowsNumberPicker" />

        <NumberPicker
            android:id="@+id/rowsNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/columnsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/rowsNumberPicker"
            android:text="@string/columns_textview_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/columnsNumberPicker"
            app:layout_constraintEnd_toStartOf="@+id/columnsNumberPicker"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/columnsNumberPicker"
            android:layout_marginRight="8dp" />

        <NumberPicker
            android:id="@+id/columnsNumberPicker"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/rowsNumberPicker" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/appCompatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:onClick="@{fragment::handleOnNextClicked}"
            android:src="@drawable/ic_check_white_24dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" />
    </android.support.constraint.ConstraintLayout>
</layout>
