...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <hidalgo.brandon.photoncodechallenge.view.components.MatrixView
                android:id="@+id/matrixView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </HorizontalScrollView>

        <TextView
...
