<resources>
    <string name="app_name">Photon Code Challenge</string>

    <!-- Matrix Dimension Fragment -->
    <string name="columns_textview_text">Columns</string>
    <string name="instructions">Choose the dimensions for the matrix</string>
    <string name="rows_textview_text">Rows</string>

    <!-- Matrix Fragment -->
    <string name="answer">Answer: %1$s\nCost: %2$d\nPath: %3$s</string>
    <string name="polc_instructions">Fill in your matrix and hit the button</string>
    <string name="cell_default_value">0</string>
    <string name="invalid_matrix_error">Invalid matrix</string>
</resources>
